# boomer

./: .env.template  .gitignore  Dockerfile  Pipfile  README.md  _config.toml  _templates.txt  _zconfig.toml  application.yaml  boomer.code-workspace  boomer.toml  cog.template  command_template.ts  config-template.toml  config.py  config.toml  config.txt  config_template.json  database_schema.sql  event_template.ts  launch.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  saved_queue_example.toml  saved_queues.toml  template.js  template.ts  test.py  tsconfig.json  zoomer.toml
.github/workflows/: publish-ghcr.yaml
boomer/: __main__.py  config.py
boomer-v2/: application-template.yaml  todo
boomer/cogs/: music.py
bot/: __main__.py  bot.py  config.py  index.js  spotify.py  util.py  video.py
bot/cogs/: error.py  meta.py  music.py  template.txt
bot/cogs/admin/: dev.py  (+2 more)
bot/handlers/: embeds.py  event.py  music.py  presence.py  queue.py  voice.py
bot/util/: cogs.py  events.py  helper.py  models.py
scripts/: launch-bot.sh  launch-server.sh  launch.sh  restart.sh  stop.sh
server/: application_template.yml
src/: config_bak.json  config_template.json  index.ts
src/helpers/: commands.ts  index.ts
src/structures/: boomer.ts  command.ts  index.ts
src/types/: command.ts  index.ts
util/: __init__.py  cfg.py  config.py  models.py
util/handlers/: database.py  download.py  embed.py  embeds.py  extensions.py  logging.py  music.py  presence.py  queue.py  voice.py
zoomer/: __main__.py  config.py  util.py  video.py
zoomer/cogs/: music.py
(+137 files in other folders)
